deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/NameWithEscapedTabsQuoted-stderr.txt
^CMake Error at NameWithEscapedTabsQuoted.cmake:1 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/NameWithEscapedTabsQuoted.cmake:1

  when parsing string

    \${var\\	with\\	escaped\\	tab}

  Invalid escape sequence \\.?
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
